--- a/.env.example
+++ b/.env.example
@@ -3,4 +3,4 @@ FLASK_DEBUG=True
 SECRET_KEY=your-secret-key-here
 SPOTIFY_CLIENT_ID=your-spotify-client-id
 SPOTIFY_CLIENT_SECRET=your-spotify-client-secret
-SPOTIFY_REDIRECT_URI=http://localhost:5000/callback
+SPOTIFY_REDIRECT_URI=http://localhost:5000/auth/callback
