Fix flake8 line length violations and exclude venv from CI

--- a/.github/workflows/continuousintegration.yml
+++ b/.github/workflows/continuousintegration.yml
@@ -9,6 +9,8 @@ jobs:
 
       - name: Python flake8 Lint
         uses: py-actions/flake8@v2.3.0
+        with:
+          args: "--exclude=venv"
 
       - name: Black Code Formatter
         uses: lgeiger/black-action@v1.0.1
