Fix Docker workflow testing for pull requests
- Add conditional testing logic for PRs vs main branch pushes
- Use local image name for PR testing to avoid DockerHub dependency
- Only test published image after successful push to main

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -53,8 +53,17 @@ jobs:
           cache-to: type=gha,mode=max
 
       - name: Test Docker image
+        if: github.event_name != 'pull_request'
         run: |
           docker run --rm -d -p 5000:5000 --name test-container ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:latest
+          sleep 10
+          curl -f http://localhost:5000/health || exit 1
+          docker stop test-container
+
+      - name: Test local Docker image (PR only)
+        if: github.event_name == 'pull_request'
+        run: |
+          docker run --rm -d -p 5000:5000 --name test-container song-soulmate:latest
           sleep 10
           curl -f http://localhost:5000/health || exit 1
           docker stop test-container
