--- a/.github/workflows/continuousintegration.yml
+++ b/.github/workflows/continuousintegration.yml
@@ -7,6 +7,16 @@ jobs:
       - name: Check out repository code
         uses: actions/checkout@v5
 
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.12'
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
       - name: Python flake8 Lint
         uses: py-actions/flake8@v2.3.0
         with:
@@ -16,3 +26,7 @@ jobs:
         uses: lgeiger/black-action@v1.0.1
         with:
           args: ". --exclude=venv"
+
+      - name: Run unit tests
+        run: |
+          pytest -v --tb=short
