Fix GitHub Actions: Replace Docker-based black action with direct command
- Replaced problematic lgeiger/black-action with direct black command
- Fixes Docker Hub authentication errors in CI pipeline
- Added --diff flag for better formatting feedback

--- a/.github/workflows/ci-with-notifications.yml
+++ b/.github/workflows/ci-with-notifications.yml
@@ -30,7 +30,7 @@ jobs:
 
       - name: Format code with black
         run: |
-          black . --exclude=venv --check
+          black . --exclude=venv --check --diff
 
       - name: Run unit tests with pytest
         run: |
