Fix CI workflow: Use proper GitHub Actions for black and install pytest
- Replaced direct black command with psf/black@stable action
- Added pytest installation before running tests
- This avoids dependency installation issues in CI

--- a/.github/workflows/continuousintegration.yml
+++ b/.github/workflows/continuousintegration.yml
@@ -23,9 +23,11 @@ jobs:
           args: "--exclude=venv"
 
       - name: Black Code Formatter
-        run: |
-          black . --exclude=venv --check --diff
+        uses: psf/black@stable
+        with:
+          options: "--check --verbose --exclude=venv"
 
       - name: Run unit tests
         run: |
+          python -m pip install pytest pytest-flask
           pytest -v --tb=short
